fix menu close jitter/visibility issue, and centered ad

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -54,13 +54,36 @@
 .size-60 { font-size: 60px; }
 .size-72 { font-size: 72px; }
 
+
+.ad-section div.ad-wrap img {
+	display: block;
+	margin: auto;
+	padding: 0px;
+}
+
+
 .search-section {
 	background: #333 none repeat scroll 0% 0%; 
 	margin-left: 0px;
-	display: none;
+	display: block;
+	visibility: visible;
 	width: 100%;
+	height: 39px;
 //	position: absolute !important;
 }
+
+.search-section.noshow {
+	background: #333 none repeat scroll 0% 0%; 
+	margin-left: 0px;
+	display: block;
+	visibility: hidden;
+	width: 100%;
+	height: 0px;
+//	position: absolute !important;
+}
+
+
+
 
 .search-section div ul {
 //	margin: 0rem .5rem .15rem .5rem
